PreviewFeatures.isEnabled()